discussion/kv_engine/172252/172252_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Add NotFound status to CouchKVStore readVBState

We should differentiate between Success and NotFound so that we
can avoid using a default constructed state if one was not found.

Change-Id: Icf0bc3c703ed03a210a3d67d06b5f0f23957566e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-18 12:29:34.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-18 13:07:10.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16074/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16074/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16074/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44533/ : FAILURE

Failure of GoogleTest "MaxConnectionTest.SystemConnection":

<pre>
[ RUN      ] MaxConnectionTest.SystemConnection
TestappTest::reconfigure(): Admin connection not set up
Last 8k of the log files
========================
unknown file: error: SEH exception with code 0xc0000005 thrown in SetUp().
[  FAILED  ] MaxConnectionTest.SystemConnection (0 ms)
MaxConnectionTest.SystemConnection
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44533/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14994/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index f50f53c35..1b65e67cd 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -120,7 +120,8 @@ public:
 
         updateLocalDocuments(*db, pendingLocalReqsQ);
 
-        errCode = couchstore_commit(db, [](const std::system_error&amp;){return true;});
+        errCode = couchstore_commit(
+                db, [](const std::system_error&amp;) { return true; });
 
         return !errCode;
     }
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 88a3b89df..0c0f2966d 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -893,7 +892,8 @@ TEST_P(KVStoreErrorInjectionTest, WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14994/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18164/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18164/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17842/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5789/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5789/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37489/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5731/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16914/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18875/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26249/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 08:13:05.000000000
Message: 
Topic 7.1.1 removed
----------------------------------------------------------------------------------------------------------------------
